--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
   <header>
     <h1>Tecnologia Web - Portal de Asignaciones</h1>
   </header> 
+
   <main>
     <div class="pr-object">
       <pre><code>
-  <span class="token-variable">let</span> estudiante <span class="token-punctuation">=</span> <span class="token-punctuation">{</span>
-      <span class="token-key">nombre</span><span class="token-punctuation">:</span> <span class="token-value">"Joaquin Alessandro Felipez Rojas"</spanText><span class="token-punctuation">,</span>
-      <span class="token-key">picture</span><span class="token-punctuation">:</span> 
-          <img class="profile-inline" src="assets/img/profile.jpeg" alt="My Profile Picture"><span class="token-punctuation">,</span>
-      <span class="token-key">asignaciones</span><span class="token-punctuation">:</span> <span class="token-punctuation">[</span>
-          <span class="token-key">Practica_1</span><span class="token-punctuation">:</span> <a href="#"><span class="token-value practica">"Servidor Web"</span></a><span class="token-punctuation">,</span>
-          <span class="token-key">Practica_2</span><span class="token-punctuation">:</span> <a href="#"><span class="token-value practica">"P2"</span></a>
-      <span class="token-punctuation">]</span>
-  <span class="token-punctuation">};</span>
+        <span class="token-variable">let</span> estudiante <span class="token-punctuation">=</span> <span class="token-punctuation">{</span>
+          <span class="token-key">nombre</span><span class="token-punctuation">:</span> <span class="token-value">"Joaquin Alessandro Felipez Rojas"</span><span class="token-punctuation">,</span>
+          <span class="token-key">picture</span><span class="token-punctuation">:</span> 
+              <img class="profile-inline" src="assets/img/profile.jpeg" alt="My Profile Picture"><span class="token-punctuation">,</span>
+          <span class="token-key">asignaciones</span><span class="token-punctuation">:</span> <span class="token-punctuation">[</span>
+            <span class="token-punctuation">{ </span><span class="token-key">Practica_1</span><span class="token-punctuation">:</span><a href="#"><span class="token-value practica">"Servidor Web"</span></a><span class="token-punctuation">},</span>
+            <span class="token-punctuation">{ </span><span class="token-key">Practica_2</span><span class="token-punctuation">:</span><a href="#"><span class="token-value practica">"P2"</span></a><span class="token-punctuation">}</span>
+          <span class="token-punctuation">]</span>
+        <span class="token-punctuation">};</span>
+          <span class="token-key">docente</span><span class="token-punctuation">:</span> <span class="token-value">"Faviola Soliz Tapia"</span><span class="token-punctuation">,</span>
       </code></pre>
     </div>
   </main>
+
   <footer>
     <p>
       &copy;2025 Joaquin Alessandro Felipez Rojas - Localizacion: Bolivia  
