--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <span class="token-key">picture</span><span class="token-punctuation">:</span> 
               <img class="profile-inline" src="assets/img/profile.jpeg" alt="My Profile Picture"><span class="token-punctuation">,</span>
           <span class="token-key">asignaciones</span><span class="token-punctuation">:</span> <span class="token-punctuation">[</span>
-            <span class="token-punctuation">{ </span><span class="token-key">Practica_1</span><span class="token-punctuation">:</span><a href="#"><span class="token-value practica">"Servidor Web"</span></a><span class="token-punctuation">},</span>
+            <span class="token-punctuation">{ </span><span class="token-key">Practica_1</span><span class="token-punctuation">:</span><a href="https://github.com/Joaquinfr87/Tecnologia-Web"><span class="token-value practica">"Servidor Web"</span></a><span class="token-punctuation">},</span>
             <span class="token-punctuation">{ </span><span class="token-key">Practica_2</span><span class="token-punctuation">:</span><a href="#"><span class="token-value practica">"P2"</span></a><span class="token-punctuation">}</span>
           <span class="token-punctuation">],</span>
           <span class="token-key">docente</span><span class="token-punctuation">:</span> <span class="token-value">"Faviola Soliz Tapia"</span><span class="token-punctuation">,</span>
