turismo json terminado

--- a/json/turismo/turismo.html
+++ b/json/turismo/turismo.html
@@ -3,15 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Destinos Turísticos</title>
     <script src="turismo.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body>
-    <header>
-      <h1>Lugares Turisticos de Cochabamba</h1>
+  <body class="bg-gray-50 font-sans antialiased">
+    
+    <header class="bg-indigo-700 text-white shadow-md">
+      <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+        <h1 class="text-4xl font-extrabold tracking-tight text-center">Lugares Turísticos de Cochabamba</h1>
+      </div>
     </header>
-    <main>
+
+    <main class="max-w-7xl mx-auto py-8 sm:px-6 lg:px-8">
+      
+      <section class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 p-4">
+        </section>
+
     </main>
   </body>
 </html>
