--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <span class="token-key">asignaciones</span><span class="token-punctuation">:</span> <span class="token-punctuation">[</span>
             <span class="token-punctuation">{ </span><span class="token-key">Practica_1</span><span class="token-punctuation">:</span><a href="https://github.com/Joaquinfr87/Tecnologia-Web"><span class="token-value practica">"Servidor Web"</span></a><span class="token-punctuation">},</span>
             <span class="token-punctuation">{ </span><span class="token-key">Practica_2</span><span class="token-punctuation">:</span><a href="./practica2/practica2.html"><span class="token-value practica">"Javascript"</span></a><span class="token-punctuation">}</span>
+            <span class="token-punctuation">{ </span><span class="token-key">Practica_3</span><span class="token-punctuation">:</span><a href="./json/json.html"><span class="token-value practica">"JSON"</span></a><span class="token-punctuation">}</span>
           <span class="token-punctuation">],</span>
           <span class="token-key">docente</span><span class="token-punctuation">:</span> <span class="token-value">"Faviola Soliz Tapia"</span><span class="token-punctuation">,</span>
         <span class="token-punctuation">};</span>
